--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -48,7 +48,143 @@
                 <a href="#"><i class="fab fa-github-alt"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
+        </aside>
+
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fab fa-html5"></i>
+                    <h3>HTML</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fab fa-css3-alt"></i>
+                    <h3>CSS</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fas fa-pencil-alt"></i>
+                    <h3>Designer</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fab fa-js"></i>
+                    <h3>Javascript</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fab fa-bootstrap"></i>
+                    <h3>Boostrap</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fab fa-github"></i>
+                    <h3>Git e GitHub</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                        maiores in cum eius voluptate voluptatem tenetur, molestias 
+                        quia sed et praesentium perspiciatis dolores eos placeat 
+                        quam distinctio pariatur est reprehenderit?</p>
+                </div>
+            </div>
+            <div class="conhecimentos-img-wrapper">
+                <img src="img/conhecimentos.png" alt="imagem conhecimento">
+            </div>
         </div>
+            </div>
+        </section>
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="img/proj1.jpg" alt="imagem do projeto ToDo"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                            maiores in cum eius voluptate voluptatem tenetur, molestias 
+                            quia sed et praesentium perspiciatis dolores eos placeat 
+                            quam distinctio pariatur est reprehenderit?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="img/proj2.jpg" alt="imagem do projeto Maratona"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                            maiores in cum eius voluptate voluptatem tenetur, molestias 
+                            quia sed et praesentium perspiciatis dolores eos placeat 
+                            quam distinctio pariatur est reprehenderit?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="img/proj3.jpg" alt="imagem do projeto Casa Bela">
+                    </div>
+                    <div class="card-info">
+                        <h2>Casa Bela</h2>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, 
+                            maiores in cum eius voluptate voluptatem tenetur, molestias 
+                            quia sed et praesentium perspiciatis dolores eos placeat 
+                            quam distinctio pariatur est reprehenderit?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </div>
 </body>
     <script src="script.js"></script>
